# harfbuzzjs

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .npmignore  .prettierignore  CMakeLists.txt  Dockerfile  LICENSE  MIGRATING.md  Makefile  README.md  TODO  b.sh  build-docker.cmd  build-subset.sh  build.sh  config-override-subset.h  config-override.h  em.runtime  harfbuzz.mjs  harfbuzz.symbols  harfbuzz.ts  harfbuzzjs.d.ts  harfbuzzjs.js  harfbuzzjs.wasm  hb-subset.symbols  hb-subset.wasm  hb.d.ts  hb.js  hb.symbols  hb.wasm  hbjs.c  hbjs.cc  hbjs.d.ts  hbjs.js  hbjs.js.map  hbjs.symbols  hbjs.ts  index.html  (+17 more)
demo/: index.html
examples/: MaterialSymbolsOutlined-VF.subset.ttx  harfbuzz-subset.example.node.js  harfbuzz.example.html  harfbuzz.example.js  harfbuzz.example.node.js  hb-subset.example.node.js  hbjs.example.html  hbjs.example.js  hbjs.example.node.js  nohbjs.html  nohbjs.js  server.js
fribidi/: index.html
fribidi.js/: build.sh  example.c
kernel/: Makefile  main.cc  module.c
libc/: ctype.h  fprintf.c  main.c  malloc.cc  pow.cc  prf.c  sprintf.c  strtol.c  zephyr-string.c
libjpeg/: build.sh  build_pc.sh  decoder.c  jconfig.h
nanojpeg/: build.sh  index.html  nanojpeg.wasm
playground/: package.json
raqm/: raqm.html  raqm.wasm
raqm.js/: build.sh  config-override.h  hbjs.c  raqm.html
src/: blob.ts  buffer.ts  client.ts  direction.ts  draw-funcs.ts  face.ts  feature.ts  font-funcs.ts  font.ts  harfbuzz.d.ts  hb.ts  helpers.ts  index.ts  language.ts  node.ts  paint-funcs.ts  script.ts  shape.ts  types.d.ts  types.ts  variation.ts
(+47 files in other folders)
